# cnbiros_wheelchair_bochum

./: .gitignore  CMakeLists.txt  package.xml
extra/: get_goal_position.m  script_goal_position.m
launch/: bochum_visualization_dynamics.launch  bochum_wheelchair_dynamics.launch  bochum_wheelchair_dynamics_simulation.launch  ros_wheelchair_bochum.launch  ros_wheelchair_bochum_alt.launch  ros_wheelchair_bochum_only_sensors.launch  ros_wheelchair_bochum_onplace.launch  ros_wheelchair_bochum_simulation.launch  ros_wheelchair_bochum_visualization.launch  ros_wheelchair_sharednavigation.launch  ros_wheelchair_visual_odometry.launch  wheelchair_bochum_laser.launch  wheelchair_navigation_dynamics.launch  wheelchair_navigation_dynamics_simulation.launch  wheelchair_navigation_joystick.launch  wheelchair_onplace.launch
params/: bci_params.yaml  costmap_common_params.yaml  costmap_global_params.yaml  costmap_local_params.yaml  params_amcl_diff.yaml  params_bci_interfaces.yaml  params_costmap_common.yaml  params_hokuyo.yaml  params_motors.yaml  params_navigation.yaml  params_navigation_common.yaml  params_odometry.yaml  params_shared_actions.yaml  params_wheelchair.yaml  planner_local_params.yaml  planner_local_simulation_params.yaml  proximitysector_params.yaml  recovery_params.yaml  sharedactions_params.yaml  sharedactions_simulation_params.yaml
params/dynamics/: params_bci_interfaces.yaml  params_costmap_common.yaml  params_costmap_global.yaml  params_costmap_local.yaml  params_joy.yaml  params_joy.yaml.bkp  params_joystick.yaml  params_laserfilters.yaml  (+5 more)
(+11 files in other folders)
